fixed button appearance on other media
Previous commit to fix view across browsers messed up the mobile and tablet button positioning.

--- a/style.css
+++ b/style.css
@@ -985,7 +985,7 @@ body, html {
         font-size: 25px;
         width: 150px;
         height: 50px;
-        top: 88.5vh;
+        top: 83vh;
         left: 40%;
         padding: 0px;
         
@@ -1269,7 +1269,7 @@ body, html {
         font-size: 25px;
         width: 150px;
         height: 50px;
-        top: 88.5vh;
+        top: 82vh;
         left: 30%;
         padding: 0px;
         
